# hopdr

./: .gitmodules  README.md  cp.sh
hopdr/: .gitignore  Cargo.toml  README.md  check  check-chc  counter_example_guided.py  env  exec_counter_example.sh  hopdr-check-runner  test.sh  transform_hflz.py
hopdr/benchmark/: gen.sh
hopdr/benchmark/inputs/: .gitignore
hopdr/benchmark/lists/: .gitignore  golem_safe  golem_unsafe
hopdr/docker/: Dockerfile
hopdr/inputs/check/: conj-e.in
hopdr/inputs/invalid/: app-e.in  intro2-e.in
hopdr/inputs/term_comp_full/: exec_lexicographic_rf.sh  exec_lexicographic_rf_full.sh
hopdr/inputs/valid/: app.in  intro2.in
hopdr/results/checker/: lin-golem-2023-12-31-01.csv  lin-spacer-2023-12-31-01.csv  nonlin-golem-2023-12-31-01.csv  nonlin-spacer-2023-12-31-01.csv
hopdr/scripts/: bench.py  build_docker.sh  eldarica.py  filter_benchmark.py  golem.py  hoice.py  launch_dev_container.sh  parse_errors.py  report_chccomp  report_golem  spacer.py
hopdr/src/: lib.rs  main.rs
hopdr/src/checker/: ai.rs  executor.rs  mod.rs  mode.rs  mode_infer.rs
hopdr/src/engine/: candidate.rs  hopdr.rs  infer.rs  mod.rs  pdr.rs  rtype.rs
hopdr/src/formula/: chc.rs  farkas.rs  fofml.rs  hes.rs  mod.rs  parse.rs  pcsp.rs  ty.rs
hopdr/src/ml/: formatting.rs  library.ml  mod.rs  peephole.rs  printer.rs  syntax.rs  ty.rs
hopdr/src/parse/: chc_parse.rs  hes.rs  mod.rs  parse.rs
hopdr/src/pdr/: derivation.rs  engine.rs  fml.rs  infer.rs  mod.rs  optimizer.rs  pdr.rs  rtype.rs  sandbox.rs
hopdr/src/preprocess/: alpha.rs  boolean_expand.rs  eta.rs  extravar.rs  find_ite.rs  forall_pass.rs  hes.rs  hfl_preprocessor.rs  inline_leaf_call.rs  ite_expand.rs  mod.rs  prenex_norm.rs  remove_tmp_var.rs  reorder_conj.rs  reorder_disj.rs  replace_ident.rs  safety.rs  simple_type.rs  simplify_constr_op.rs  transform.rs  typing.rs  unpack_constr.rs
hopdr/src/solver/: chc.rs  csisat.rs  disj.rs  interpolantion.rs  interpolation.rs  mod.rs  qe.rs  sat.rs  smt.rs  util.rs
hopdr/src/stat/: chc.rs  (+7 more)
hopdr/tests/: tests.rs
(+26 files in other folders)
