[package]
name = "hopdr"
version = "0.1.0"
authors = ["moratorium08 <moratorium08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.9.0"
nom = "5"
rpds = "0.8"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.8.2"
