[package]
name = "hopdr"
version = "0.1.0"
authors = ["moratorium08 <moratorium08@gmail.com>"]
edition = "2018"

[[bin]]
name = "hopdr"
path = "src/bin/main.rs"
doc = false

[[bin]]
name = "check"
path = "src/bin/check.rs"
doc = false

[lib]
name = "hopdr"
path = "src/lib.rs"

[features]
no_simplify_by_finding_eq = []
# stat feature enables stat on the usage of various background solvers. Assumption: library does not run concurrently
stat = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.9.0"
nom = "5"
rpds = "0.8"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.8.2"
tempfile = "3"
wait-timeout = "0.2"
lexpr = "0.2.5"
colored = "2"
clap = { version = "3.1.2", features = ["derive"] }
atty = "0.2"
either = "*"
once_cell = "1.13.1"
home = "0.5.3"
ctrlc = "3.2.3"
pretty = { version = "0.11", features = ["termcolor"] }
terminal_size = "0.2"
hoice = { git = "https://github.com/moratorium08/hoice", ref = "c187d5585c56964ca263f3585cfd6338b2195982"}


[dev-dependencies]
ctor = "0.1.22"

[profile.release]
debug = true

